--- a/NOTES.org
+++ b/NOTES.org
@@ -3,10 +3,13 @@
 
 * Problems
 
-** argon2
-[[file:src/index.ts::import { UserResolver } from "./resolvers/user";][UserResolver]] unable to load module argon2 
 * Fixed
 ** updatePost
 updatePost command still splits error in typegraphql
 *** Solution
 [[file:src/resolvers/post.ts::const post = await em.findOne(Post, { id });][await]] is needed before ~em.findOne~
+** argon2 - actually import
+*Problem is not in the ~argon2~ module*
+But it was from the auto import of ~lsp~ that direct to ~User~ entity in ~/src/entities/User~
+*** Solution
+[[file:src/resolvers/user.ts::import { User } from "../entities/User";][import]] directory needs to redirected to relative directory ~../entities/User~
